; ModuleID = '/home/carl/AnghaBench/RetroArch/gfx/include/userland/containers/io/extr_io_pktfile.c_read_byte_order.c'
source_filename = "/home/carl/AnghaBench/RetroArch/gfx/include/userland/containers/io/extr_io_pktfile.c_read_byte_order.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@VC_CONTAINER_ERROR_EOS = common dso_local global i32 0, align 4
@VC_CONTAINER_ERROR_CORRUPTED = common dso_local global i32 0, align 4
@VC_CONTAINER_SUCCESS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32*)* @read_byte_order to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @read_byte_order(i32* %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store i32* %1, i32** %5, align 8
  %7 = load i32*, i32** %4, align 8
  %8 = call i32 @fread(i32* %6, i32 1, i32 4, i32* %7)
  %9 = sext i32 %8 to i64
  %10 = icmp ne i64 %9, 4
  br i1 %10, label %11, label %13

11:                                               ; preds = %2
  %12 = load i32, i32* @VC_CONTAINER_ERROR_EOS, align 4
  store i32 %12, i32* %3, align 4
  br label %23

13:                                               ; preds = %2
  %14 = load i32, i32* %6, align 4
  switch i32 %14, label %19 [
    i32 129, label %15
    i32 128, label %17
  ]

15:                                               ; preds = %13
  %16 = load i32*, i32** %5, align 8
  store i32 1, i32* %16, align 4
  br label %21

17:                                               ; preds = %13
  %18 = load i32*, i32** %5, align 8
  store i32 0, i32* %18, align 4
  br label %21

19:                                               ; preds = %13
  %20 = load i32, i32* @VC_CONTAINER_ERROR_CORRUPTED, align 4
  store i32 %20, i32* %3, align 4
  br label %23

21:                                               ; preds = %17, %15
  %22 = load i32, i32* @VC_CONTAINER_SUCCESS, align 4
  store i32 %22, i32* %3, align 4
  br label %23

23:                                               ; preds = %21, %19, %11
  %24 = load i32, i32* %3, align 4
  ret i32 %24
}

declare dso_local i32 @fread(i32*, i32, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
